--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       >
 <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/jaehub-logo.png" alt="" class="img-fluid"></a>
 
-        <nav id="navbar" class="navbar order-last order-lg-0">
+        <!--<nav id="navbar" class="navbar order-last order-lg-0">
           <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav>
+        </nav>-->
         <!-- .navbar -->
 
-        <a href="#about" class="get-started-btn scrollto">Get Started</a>
+        <div data-bs-toggle="modal" data-bs-target="#Modal-06" class="get-started-btn scrollto get-started">Get Started</div>
       </div>
     </header>
     <!-- End Header -->
@@ -76,7 +76,7 @@
 
         <div class="row">
           <div
-            class="col-lg-4 col-md-6 d-flex align-items-stretch"
+            class="col-lg-4 col-md-6 d-flex align-items-center"
             data-aos="zoom-in"
             data-aos-delay="100"
           >
@@ -87,7 +87,7 @@
           </div>
 
           <div
-            class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0"
+            class="col-lg-4 col-md-6 d-flex align-items-center mt-4 mt-md-0"
             data-aos="zoom-in"
             data-aos-delay="200"
           >
@@ -98,7 +98,7 @@
         </div>
 
           <div
-            class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0"
+            class="col-lg-4 col-md-6 d-flex align-items-center mt-4 mt-lg-0"
             data-aos="zoom-in"
             data-aos-delay="300"
           >
@@ -109,7 +109,7 @@
         </div>
 
           <div
-            class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
+            class="col-lg-4 col-md-6 d-flex align-items-center mt-4"
             data-aos="zoom-in"
             data-aos-delay="100"
           >
@@ -120,7 +120,7 @@
         </div>
 
           <div
-            class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
+            class="col-lg-4 col-md-6 d-flex align-items-center mt-4"
             data-aos="zoom-in"
             data-aos-delay="200"
           >
@@ -131,7 +131,7 @@
         </div>
 
           <div
-            class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
+            class="col-lg-4 col-md-6 d-flex align-items-center mt-4"
             data-aos="zoom-in"
             data-aos-delay="300"
           >
@@ -150,6 +150,7 @@
     <!-- End Hero -->
 
     <main id="main">
+      
     </main>
     <!-- End #main -->
 
